# faff-plugin-matrix

./: .gitignore  README.md  config.template.toml  pyproject.toml
src/faff_plugin_matrix/: main.py
